Fix cart checkout 404 on mobile: POST cart form; drawer dvh + touch

--- a/assets/elaris-cart-drawer.css
+++ b/assets/elaris-cart-drawer.css
@@ -58,6 +58,8 @@
   top: 0;
   right: 0;
   bottom: 0;
+  height: 100%;
+  height: 100dvh;
   width: min(100%, 420px);
   max-width: 100vw;
   background: #fff;
@@ -285,6 +287,12 @@
   line-height: 1.45;
 }
 
+.elaris-cart-drawer__checkout-form {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
 .elaris-cart-drawer__checkout {
   display: block;
   width: 100%;
@@ -300,6 +308,12 @@
   border-radius: 999px;
   border: 2px solid #580514;
   transition: background 0.25s, color 0.25s;
+  cursor: pointer;
+  -webkit-appearance: none;
+  appearance: none;
+  font-family: inherit;
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .elaris-cart-drawer__checkout:hover {
